--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <html>
 	<body>
-		Hello! I'm Tanaka!
-		everyone1
-		Hello! I'm HO.
-		Hello! I'm HO.
-		Hello! I'm HO.
-		Hello! I'm HO.
-		Hello! I'm HO.
-		Hello! I'm HO.
-		2111-01-01 
-		Hello! I'm Kataoka!
+		everyone1 <br>
+		Hello! I'm HO. <br>
+		2111-01-01  <br>
+		Hello! I'm Kataoka! <br>
 	</body>
 </html>
 
